--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@ evaluate = max . maximize' . highfirst . maptree static . prune 8 . gametree
 				<section>
 					<h2>Conclusions by Andrew<img src="images/andrew.jpg" style="height:100px;margin-left: 15px;position: relative;top: 21px;"/></h2>
 					<p>Expressiveness</p>
+					<p>Immutable Data</p>
 					<p>Easier to learn</p>
 				</section>
 				
