--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				</section>
 				
 				<section>
-					<h2>Co-author</h3>
+					<h2>Co-author</h2>
 					<p>Haskell</p>
 					<img src="images/haskell.jpg"/>
 				</section>
@@ -353,6 +353,7 @@ evaluate = max . maximize' . highfirst . maptree static . prune 8 . gametree
 					<h2>Conclusions by Andrew<img src="images/andrew.jpg" style="height:100px;margin-left: 15px;position: relative;top: 21px;"/></h2>
 					<p>Expressiveness</p>
 					<p>Immutable Data</p>
+					<p>Pattern Matching</p>
 					<p>Easier to learn</p>
 				</section>
 				
